--- a/manage/pmp/10-沟通.md
+++ b/manage/pmp/10-沟通.md
@@ -1,4 +1,570 @@
+# PMP试题第十章 项目沟通管理-历年试题资料-中培课堂 http://www.zpedu.com/SubjectInfo1467.html
+  15，6，
+# PMP习题_百度文库 https://wenku.baidu.com/view/e5f3a59f168884868662d6d4.html
+  137 P6，
 
+
+# PMBOK指南（第5版）第十章习题_seahill_新浪博客 http://blog.sina.com.cn/s/blog_4d2d43010101gclk.html
+
+
+1. You are working hard to be an excellent project manager. But you found that you have a tendency to come up with a decision on you own judgment. If you wish to approach an issue by standing in others’ shoes, what should you do? 
+A. Empathic listening skills
+B. Speaking skills
+C. Presentation skills
+D. Active listening skills
+1. 你在努力成为一个优秀PM，你发现自己习惯直接下结论。你想多从别人角度看问题，应该发展哪项技能？
+A. 换位的倾听技巧 
+B. 演说技巧
+C. 演示技巧
+D. 积极倾听技巧
+
+2．The MOST likely result of communication blockers is that:
+A. the project is delayed.
+B. trust level is enhanced.
+C. conflict occurs.
+D. senior management is displeased.
+2. 沟通出现障碍时最可能的结果是：
+A． 项目被延迟
+B． 增强了信任
+C． 出现冲突
+D． 高级管理层很生气
+
+3. What is one of the most important skills a project manager can have? 
+A. Negotiation skills
+B. Influencing skills
+C. Communication skills 
+D. Problem-solving skills
+3. 项目经理应该具备的最重要的技能是下列哪一种技能？
+A． 谈判
+B． 影响
+C． 沟通
+D． 解决问题
+
+4．How much of Project Manager's time is spent on Communication? 
+A. 50 %
+B. 90% 
+C. 30 % 
+D. 40 % --60 %
+4. 项目经理花在沟通上的时间占多少?
+A．50%
+B. 90%
+C．30% 
+D．40%一60%
+
+5．Projects, by their nature, requires that:
+A． Communications be limited to facts regarding the product, schedule, quality, and cost
+B． Communications be closely controlled so that competing project managers will not get an unfair advantage
+C． The project manager be the focal point of communications between the customer, top management, line managers, and project personnel
+D． All project reports are shared externally and internally
+5. 项目的特性要求:
+A．沟通局限于有关产品、进度、质量和成本的事实
+B．应当严格控制沟通，以便不让竞争的项目经理得到不公正的优势
+C．项目经理是客户、高级管理层、职能经理和项目成员之间沟通的焦点
+D．所有项目报告部要在内部和外部共享
+
+6．When a project manager is engaged in negotiations, non-verbal communication skills are of:
+A. little importance.
+B. major importance.
+C. importance only when cost and schedule objectives are involved.
+D. importance only to ensure you win the negotiation.
+6. 当一位项目经理在谈判时，非口头沟通技巧：
+A．不怎么重要 
+B．很重要 
+C．只有当谈判中包括成本和进度目标时才重要
+D．只有当确定你赢得谈判胜利时才重要
+
+7．Filtering is a concept that occurs when:
+A． a technique used in conjunction with a project communication plan
+B． the supervisor performs verification and documentation of the results of a communications message
+C． a large portion of the message was lost in upward or downward communications between a subordinate and supervisor
+D． A and B
+7. 过滤是何时发生的一个概念:
+A．是和项目沟通计划一起使用的一个技术
+B．当监督人对一个沟通讯息的结果进行核实和归档时
+C．在下级与上级之间的向上或向下沟通中，丢失了讯息的大部分
+D．A和B 
+
+8．A team member violated the ground rule the first time. What type of communication method will the project manager use with the team member?
+A. Formal verbal. 
+B. Formal written.
+C. Hallway discussion.
+D. Informal written.
+8. 一个团队成员第一次违反了基本规则。项目经理对他应该采用什么类型的沟通方法？
+A. 正式口头
+B. 正式书面
+C. 走廊交谈
+D. 非正式书面
+
+9．A team member violated the ground rule the second time. What type of communication method will the project manager use with the team member?
+A. Informal verbal. 
+B. Formal written.
+C. Hallway discussion.
+D. Informal written.
+9. 一个团队成员第二次违反了基本规则。项目经理对他应该采用什么类型的沟通方法？
+A. 非正式口头
+B. 正式书面
+C. 走廊交谈
+D. 非正式书面
+
+10．Which of the following is true regarding communication within a project environment?
+A． The project manager must assume the primary burden of responsibility to ensure that messages sent have been received.
+B． Effective meetings, a war room, and a tight matrix promote effective communication
+C． If a project consists of 12 people, 48 potential channels of communication exist.
+D． Most project managers spend 30 percent of their working hours engaged in communication. 
+10. 在项目环境下，下列有关沟通的论述哪一个是正确的:
+A．项目经理必须承担主要责任，以确保发出的讯息已经收到
+B．有效的会议、"作战室"和紧密型矩阵可以促进有效的沟通
+C．如果一个项目由12人组成，则存在42个潜在的沟通渠道
+D．大多数项目经理花费30%的工作时间用于沟通
+
+11．Under a seller agreement, formal, written correspondence with the seller is required when:
+A. change to the project is issued.
+B. meeting with the seller’s management is held. 
+C. seller is asked for supporting information.
+D. there is a follow up to a conversation.
+11. 根据提供商的协议，正式的，与提供商之间书面信件沟通在何时被要求？  
+A． 项目的变更被发布 
+B． 会见提供商的管理层时 
+C． 提供商要求支持信息时 
+D． 深入沟通时 
+
+12．Formal, written correspondence with the customer is required when: 
+A. defects are detected
+B. the customer requests additional work not covered under contract 
+C. The project has a schedule slippage
+D. the project has cost overruns
+12. 在下列哪种情况下需要与客户进行正式的书面通信
+A．检查出了缺陷 
+B．客户要求合同没有包括的额外工作
+C．项目进度拖延
+D．项目有成本超支
+
+13．The reengineering project started in an organization of 5,000 employees. The project 
+team is composed of each representative from each organization. The best way to identify 
+and satisfy project information needs of stakeholders is 
+A. Communication management Plan
+B. Communication and Responsibility Matrix 
+C. Staffing and resource management Plan 
+D. OBS 
+13. 在一个有5000名雇员的组织中开始进行一个重组项目。项目队伍由每个组织单位中一名代表组成。识别和满足利害关系者对项目信息需求的最好方式是:
+A．沟通管理计划
+B．沟通和责任矩阵
+C．人员分配和资源管理计划
+D．组织分解结构(OBS) 
+
+14．Extensive use of ___ communication is most likely to aid in solving complex problems.
+A. verbal
+B. written
+C. formal
+D. non-verbal
+14. 广泛使用（ ）沟通很可能有助于解决复杂问题。 
+A．口头 
+B．书面  
+C．正式 
+D．非口头的 
+
+15．The project has a problem with personnel performance. This is best handled through:
+A. Formal written communication 
+B. Formal verbal communication 
+C. Informal written communication 
+D. Informal verbal communication
+15. 项目人员表现存在问题、这种问题最好通过下列哪种方法解决，
+A．正式的书面沟通
+B．正式的口头沟通
+C．非正式书面沟通
+D．非正式口头沟通
+
+16．In person-to-person communication, messages are sent on verbal levels and nonverbal levels 
+simultaneously. As a general rule, what percentage of the message actually is sent through 
+nonverbal cues?
+A. 5%-15% 
+B. 20%-30% 
+C. 40 %-50 % 
+D. Greater than50%
+16. 在人对人的沟通中，讯息同时通过口头和非口头传送．作为一个一般规则，通过非口头暗示传送的讯息占多少百分比:
+A．5%＿15% 
+B．20%＿30%
+C．40%＿50%
+D．高于50%
+
+17．Communication under a contract should tend toward:
+A. Formal written communication
+B. Formal verbal communication 
+C. Informal written communication 
+D. Informal verbal communication
+17. 按合同进行的沟通应当趋向于:
+A．正式的书面沟通
+B．正式的口头沟通
+C．非正式书面沟通
+D．非正式口头沟通
+
+18.. Feedback is:
+A. Acknowledgement that a message was received.
+B. Agreement with the message.
+C. Always received.
+D. An inefficient waste of time.
+18. 反馈是：
+A. 确认信息被接收
+B. 同意该信息
+C. 总能被接收到
+D. 无效的并且浪费时间
+
+19．The critical element in a project's communication system is the: 
+A. progress report
+B. project directive 
+C. project manager 
+D. customer
+19. 项目沟通系统中的关健要素是:
+A．进展报告 
+B．项目指示
+C．项目经理
+D．客户
+
+20. Stacy needs to develop a Communications Management Plan for her project. Which of the following is a tool or technique that will help her with that task? 
+A. Communications Management Plan
+B. Communications Requirements Analysis
+C. Project Scope Statement
+D. Communications Skills.
+20. Stacy需要为她的项目制定沟通管理计划。下面哪个工具或技术会对她的工作有帮助？ 
+A. 沟通管理计划
+B. 沟通需求分析
+C. 项目范围说明书
+D. 沟通技能
+
+21. Up and down the organization and with peers are what dimensions of communication?
+A. Internal and external.
+B. Vertical and horizontal.
+C. Internal and Intra-team.
+D. Global and local.
+21. 组织上下级和同级之间沟通属于哪种沟通？
+A. 内部和外部的
+B. 垂直的和水平的
+C. 团队内部的和团队间的
+D. 全局的和局部的
+
+22.International activities and diverse stakeholders are a part of more projects than ever. Because the objectives of time, cost, and performance may be interpreted differently for these types of projects, kickoff meetings (even those conducted electronically) are especially important. All the following are objectives of the kickoff meeting except
+A. Establishing working relationships and standard formats for global communication
+B. Reviewing project plans
+C. Establishing individual and group responsibilities and accountabilities
+D. Discussing specific legal issues regarding the contract
+22.现在的项目比以往的项目牵扯到更多的国际合作和形形色色的干系人。 因此，如果没有在项目进行之前统一大家的理解， 那么对项目的时间、 成本和业绩方面的目标可能会出现各种各样的解释， 所以项目动员大会是非常重要的 (即使是通过多媒体的形式召开的动员大会也是具有重要的意义)。下列各项中， 哪一项不属于动员大会的目标?
+A. 确立项目各部分的沟通关系和标准形式
+B. 审阅项目计划 
+C. 确定个人和小组的责任和义务
+D. 讨论与合同有关的、 具体的法律问题
+
+23. To a project manager, what is disadvantage of progress reports over watching what is going on in a project asking questions, and assisting team members?
+A. Progress reports, include information from all the team.
+B. Progress reports include information from stakeholders.
+C. Progress reports generally show problems after they have occurred.
+D. Progress reports supply information about trends.
+23. 对于项目经理而言，阅读进展报告同实地观察项目情况、询问问题并协助团队成员的工作相比，有什么不利之处？
+A．进展报告包含所有团队成员提供的信息。
+B．进展报告含干系人提供的信息。
+C．进展报告一般在事发后显示发生的问题。
+D. 进展报告提供趋势方面的信息。
+
+24．All the following are examples of informal written communication except
+A. Engineers' notes
+B. E-mail messages 
+C. The project management plan
+D. A and B
+24.下列各项哪一项不是非正式书面沟通的例子;
+A．工程师的笔记 
+B．电子邮件信息 
+C．项目管理计划
+D．A和B
+
+25.The current update to the schedule performance report shows no schedule variance. Based upon this report, you tell the client than the project is on time. However, your team members know that you just missed a major milestone and the project will not meet is startup date. This is an indication of poor:
+A. Team trust 
+B. Scope management planning
+C. Plan communications
+D. Schedule planning 
+25. 最新绩效报告显示某项目无进度偏差,基于该报告,你告诉客户该项目按时运行,然而团队成员很清楚：项目刚刚错过一个主要的里程碑，不可能按期启动。这表明欠缺：
+A. 团队信任
+B. 范围管理规划
+C. 规划沟通
+D. 进度规划
+
+26. A boss called a project manager and asked for a new report. As the project manager analyzed the information needs,he did not think that the boss needed such information. What shall the project manager do? 
+A. Find the most effective way to provide the requested information.
+B. Such a request may be rejected if the information value is low.
+C. Request additional resources and cost necessary for additional information.
+D. Have a team meeting in order to understand the background of the boss’s request.
+26.老板打电话给项目经理索要一份新的报告。项目经理分析了他的信息需求以后，认为老板不需要这样的信息。项目经理应该怎么做？
+A. 找到最有效的方法，提交老板所需要的信息
+B. 如果信息价值很低，这样的请求可以拒绝
+C. 申请额外的资源和成本，为老板编制额外的信息
+D. 召开团队会议来了解老板所要求的信息背景
+
+27. Ed needs to compress his project timeline, so he increases his team size to add resources to some critical path activities. What else must change?
+A. WBS
+B. Communications Management Plan
+C. Project Charter
+D. Crashing the project.
+27. 爱德华需要压缩他的项目进度，因而他扩大他的团队，为关键路径活动增加资源。除此之外，还需要修改？
+A. WBS
+B.沟通管理计划
+C. 项目章程
+D. 赶工
+
+
+28. As the leader of a project team, the project manager may be required to assess the competencies of his or her team members. Occasionally, some weaknesses or areas for improvement will be identified. The project manager should:
+A. Communicate those weaknesses and establish a performance improvement  program.
+B. Remove any team members who have demonstrated weaknesses in critical  knowledge areas.
+C. Hire additional resources to compensate for weak areas.
+D. Wait for the team member to fail in an assignment to justify termination.
+28. 作为一个项目团队的领导，项目经理需要评估团队成员的能力，有时，发现一些需要改善的弱点，项目经理应该：
+A. 就弱点沟通并建立绩效改善计划
+B. 剔除那些在关键知识领域有弱点的成员
+C. 雇用额外的资源以补偿薄弱环节
+D. 等待团队成员在任务中失败以便有理由终止雇用
+
+29．You have decided to organize a study group of other project managers in your organization to help prepare for the PMP exam. Everyone is highly motivated to earn the credential because the CEO has decided to pay a $5,000 bonus to each person who becomes certified. What type of communication are you employing in your efforts to organize this group?
+A． Horizontal
+B． Vertical
+C． Formal
+A． External
+29. 你决定要在公司中组建一个PMP考试的学习小组， 邀请公司内部其他的项目经理一起参加， 以此帮助大家更好地准备这次考试。 由于公司总经理已经决定要奖励每个通过考试的人5000美元， 所以每个人都有了很强的动力要通过考试。 那么， 在组织这个学习小组的过程中你要采用什么类型的沟通方式呢?
+A． 水平型
+B． 垂直型
+C． 正式型
+D． 外部型
+
+30. You are managing a project to develop nutritional soda for the “under 20” market. You have recently heard that the client calls your progress reports the “Code of Crap” because they seem to be written in a foreign language and incomprehensible. This situation could have been avoided by-
+A.  Informing the client at the start of the project of the types of reports they will
+  receive 
+B.  Using risk management techniques to identify client reports
+C.  Hiring an expert report writer to prepare standard reports
+D.  Develop a communication plan
+30. 你管理一个面向20岁以下市场的营养饮料的开发项目，你最近听说客户把你的进展报告称为“天书”，难以理解。这种情况可以通过什么来避免：
+A. 在项目开始的时候告诉客户他们将收到的报告类型
+B. 使用风险管理技巧来识别客户报告
+C. 雇佣专家来撰写标准报告
+D. 制定一个沟通计划
+
+31. Which of the following is most appropriate for face-to-face communication? 
+A. Providing a permanent record of key project decisions
+B. Addressing negative behavior of one of your project team members
+C. Encouraging creative thinking of project team members
+D. Asking information questions of key project stakeholders
+31. 有很多沟通的方法，下列哪种情况适合“面对面”的沟通？
+A. 提供一个关键项目决策的永久记录时 
+B. 针对一个团队成员的负面行为时
+C. 鼓励团队成员的创新思维时
+D. 询问关键干系人信息时    
+
+32. A project has several teams. Team A has repeatedly missed several deadlines in the past. This has caused Team B to have to crash the critical path several times. As the project leader for Team B,you should_____
+A. Meet project manager alone
+B. Meet leader of team A             
+C. Meet sponsor
+D. Meet project manager and leader of Team A
+32．一个项目由几个团队组成，小组A 在过去曾多次在最后期限前没有完成任务，这导致小组B好几次不得不对关键路径赶工。作为B组项目领导, 你应该______
+A. 单独会见项目经理
+B. 会见小组A的领导
+C. 会见发起人
+D. 会见项目经理和小组A的领导
+
+33. You have a project team consisting of people from four countries. The project is very important to the company and the project manager is concerned about its success. The length of the project schedule is acceptable. What type of communication methods should you use? A. Informal verbal
+B. Formal written
+C. Formal verbal
+D. Informal written
+33. 你的项目团队来自四个不同的国家。项目对于公司非常重要，项目的工期是可以接受的。在选择沟通方法上，你应该使用：
+A. 非正式口头
+B. 正式书面
+C. 正式口头
+D. 非正式书面
+
+34．Barriers can influence communication when sending or receiving information. Which of the following is NOT a barrier? 
+A. Prejudices
+B. Attitudes and emotions
+C. Personalities and interests
+D. Feedback
+34. 当发送或接收信息时，沟通障碍可以能会影响沟通效果。下面哪项不属于沟通障碍？
+A. 偏见
+B. 态度和情绪
+C. 人身攻击与兴趣
+D. 反馈
+
+35. The project status meeting is not going well. Everyone is talking at the same time, there are people who are not participating and many topics are being discussed at random. Which of the following rules for effective meetings is not being adhered to?
+A. Courtesy and consideration of each other 
+B. Schedule meetings in advance 
+C. Have a purpose for the meeting
+D. Create and publish an agenda 
+35. 项目状态会议进展不顺，每个人都在讲话，有人不参与会议，许多议题随机讨论。下列哪个是有效会议规则而未被遵守？
+A. 相互谦恭和体谅
+B. 提前制定会议日程
+C. 有明确的开会目的
+D. 制定公布会议议程   
+
+36. Your project is well into the execution phase and remains on time, on budget and on specification. This morning, your project sponsor called to express concern about the project. Based on the schedule baseline, the project should be nearing implementation, but the sponsor does not know the current status of the project. You remind the sponsor that your team produces a detailed status report weekly and distributes it via e-mail. The sponsor indicates that e-mil is too impersonal and verbal updates are preferred. This situation suggests problems with which of the following project management processes?
+A. Plan communications management
+B. Management communications
+C. Control communications
+D. Stakeholder management
+36.项目顺利进入到执行阶段，按时、在预算内并符合规范。今天早上，项目出资人来电话表示担心。基于进度基准，该项目接近执行阶段，但该出资人不清楚项目目前状态。你提醒他你们团队每周出一份详细的项目状态报告并通过电子邮件发送。该出资人表示电子邮件太没人情味而喜欢口头确认。这一现象说明下列哪个管理过程出了问题？
+A. 规划沟通管理
+B. 管理沟通
+C. 控制沟通
+D. 利害关系都管理
+
+37.  A project manager has just been assigned a team that comes for many countries including Brazil, China, the US and Britain. What is her BEST tool for success?
+A. The Responsibility Assignment Matrix(RAM)
+B. The teleconference 
+C. Team communication with the WBS 
+D. Communication and well developed people skills
+37. 一名项目经理刚刚负责一个团队，该团队成员来自包括巴西、中国、美国和英国在内的许多国家。以下哪项是她取得成功的最佳工具？
+A. 职责分配矩阵
+B. 远程电话会议
+C. 团队信息沟通工作分解结构
+D. 沟通和良好有人际关系技巧
+
+38．A project team was composed of 5 member .five more members additionally joined to this team. what are the  communication channels added?
+A. 6
+B. 35
+C. 2times
+D. 20
+38.项目团队原来有5个成员。现在新增加5个。沟通渠道增加了多少？
+A. 6条
+B. 35条
+C. 2倍
+D. 20条
+
+39．You prepared an integrated project plan and a project schedule. You submitted it to the steering committee, and it was approved. Key stakeholders accepted the plan. It is time to distribute it. Both the project plan and schedule should be distributed to
+A． All stakeholders in the performing organization
+B． All project stakeholders
+C． Project team members and the' project sponsor
+D． People noted in the communications management plan
+39.你在准备一个综合项目计划和一个项目时间表。 你将它们提交给筹划指导委员会， 并得到了批准。 有关各方也接受了计划。 现在是分发这些计划的时候了。 项目计划和时间表应该分发给:
+A． 组织中执行项目的所有有关各方
+B． 项目所有的干系人
+C． 项目小组成员和项目发起人
+D． 在沟通管理计划中指明的人
+
+40. A project team has members in 4 different locations with varying information systems. The project manager works with the project team. To determine how project information will be distributed, these methods are detailed in which document?
+A. Overall project plan
+B. Activity definition
+C. Communication management plan
+D. Staffing management plan
+40. 项目团队成员工作在具有不同信息系统的四个地方，项目经理与这些成员一起工作，要想确定如何发布项目信息，下列哪个文件中详细描述了信息发布方法？
+A. 项目总体计划
+B. 活动定义
+C. 沟通管理计划
+D. 员工管理计划
+
+41. A project loses a contractor in the middle of a project. A new project team is formed 
+to replace the role of the lost contractor and his/her team. As a project manager, what is 
+the FIRST topic to address to the team in the kick-off meeting?
+A．Identify team roles and responsibilities.
+B．Review detailed schedule.
+C．Discuss cost estimates.
+D．Emphasize your authority.
+41.在项目进行过程中，有一家承包商退出了，这样，项目就组建了一支新团队以完成承包商及其团队所
+应当承担的角色。你认为项目经理在开工会议上，需要给团队交待的第一件事是：
+A. 确定团队角色和职责
+B. 评估详细进度
+C. 讨论成本估算
+D. 强调你的权威
+
+42.One bank based on Hong Kong selected one US software developer as their contractor for their new system which should fit all standard teller banking system. But after the US company submit the products, the products were denied by the bank. What is most possible reason for this?
+A. Culture difference between US and Hong Kong.
+B. SOW was using imprecise words
+C. The bank is using different test method and strateges
+D. Poor communication between the bank and the software developer
+42.一个香港银行选择一个美国软件开发商为他们新系统的承包商，但是当美国公司提交产品的时候，所提交的产品被银行否决，最有可能的原因是什么？
+A． 美国和香港的文化差异
+B． 工作说明书用词不准
+C． 银行用的不同的测试方法和策略
+D． 银行和开发商之间沟通太差
+习题解答，2013年8月8日17：30更新
+
+1. 参考答案：A。从对方角度考虑问题，即换位思考。
+
+2. 参考答案：C。沟通不畅通，容易导致冲突发生
+
+3. 参考答案：C。项目经理90%的时间在沟通，参见培训讲义第245页
+
+4. 参考答案：B。参见培训讲义第245页
+
+5. 参考答案：C。参见培训讲义第245页
+
+6. 参考答案：B。参见培训讲义第247页
+
+7. 参考答案：C
+
+8. 参考答案：C
+
+9. 参考答案：B
+
+10. 参考答案：B
+
+11. 参考答案：A。变更需要正式书面的沟通
+
+12. 参考答案：B。变更需要正式书面的沟通
+
+13. 参考答案：A。参见培训讲义第251页
+
+14. 参考答案：B。书面沟通，可以保留证据，帮助解决复杂问题
+
+15. 参考答案：D
+
+16. 参考答案：D。参见培训讲义第247页
+
+17. 参考答案：A
+
+18. 参考答案：A
+
+19. 参考答案：C
+
+20. 参考答案：B。参见培训讲义第249页
+
+----------------------------------------------------------------
+
+21. 参考答案：B。参见培训讲义第246页
+
+22. 参考答案：D。启动会是务虚的会议，不是务实的会议。参见培训讲义第60页
+
+23. 参考答案：C。
+
+24. 参考答案：C。不是非正式书面沟通--是指正式书面沟通
+
+25. 参考答案：C。项目经理和团队成员得到的信息不一致，说明没有沟通好
+
+26. 参考答案：B。项目资源只能用来沟通有利于成功的信息，或者那些因为缺乏沟通会造成失败的信息。参见培训讲义第249页
+
+27. 参考答案：B。扩大团队，会改变沟通管理计划。进度压缩，范围不变，排队选项A；不会改变项目章程，排除选项C；为关键活动增加资源，就是赶工，即选项D。
+
+28. 参考答案：A
+
+29. 参考答案：A。参见培训讲义第246页
+
+30. 参考答案：D。参见培训讲义第251页
+
+31. 参考答案：B
+
+32. 参考答案：D
+
+33. 参考答案：B
+
+34. 参考答案：D。参见培训讲义第249-250页
+
+35. 参考答案：D
+
+36. 参考答案：A。参见培训讲义第247页
+
+37. 参考答案：D
+
+38. 参考答案：B。参见培训讲义第249页
+
+39. 参考答案：D。参见培训讲义第251页
+
+40. 参考答案：C。参见培训讲义第251页
+
+-----------------------------------------------------------------------------------
+
+41. 参考答案：A。参见培训讲义第60页
+
+42. 参考答案：D。做跨国项目，应尊重文化差异，但被否决，是沟通太差引起的。如果没有选项D，就选A。
 
 # PMP 第10章  项目沟通管理 试题 及解析_爱随风来_新浪博客 
     http://blog.sina.com.cn/s/blog_75cd9f870100vk1t.html
