--- a/manage/pmp/10-沟通.md
+++ b/manage/pmp/10-沟通.md
@@ -2,7 +2,346 @@
   15，6，
 # PMP习题_百度文库 https://wenku.baidu.com/view/e5f3a59f168884868662d6d4.html
   137 P6，
+# 第五版PMP模拟试题3 - 豆丁网 http://www.docin.com/p-958655809-f3.html
+  131 P22,
+# pmp资格认证考试分类模拟题项目沟通管理(二) - 职业资格 - 道客巴巴 http://www.doc88.com/p-5496378679986.html
+  22 P2，
 
+
+  
+# PMP 第10章  项目沟通管理 试题 及解析_爱随风来_新浪博客 http://blog.sina.com.cn/s/blog_75cd9f870100vk1t.html
+  30
+
+  1.在项目团队中，沟通(  )。
+  A.越多越好                                     B.只能针对那些有利于项目成功的信息
+  C.应该在所有的项目团队成员之间进行             D.应该把所有信息发送给所有团队成员
+2.问题日志用来记录和监督问题的解决情况。以下哪项对于确保问题解决最有用?(    )
+  A.把问题作为一个单独的活动，列入项目进度计划中。
+  B.把问题的解决方案作为一个工作包，列入项目工作分解结构中。
+  C.项目经理亲自负责制定和执行问题的解决方案。
+  D.为问题的解决指定责任人，并规定解决日期。
+3.信息发送者对下列哪一项负责?(    )
+  A.确保信息被正确接收和理解                     B.促使信息接收者赞同信息的内容
+  C.尽量减少沟通中的噪声                         D.确保信息清晰和完整以便被正确理解
+4.以下所有信息都对项目的沟通需求有直接影响，除了(    )。
+  A.项目持续时间长短                             B.组织机构图
+C.参与项目工作的人数                           D.项目的跨学科、跨专业程度
+5.沟通管理计划通常不包括(    )。
+  A.项目干系人的沟通要求                         B.项目主要里程碑和目标日期
+  C.接收信息的人或组织                           D.信息分发的时间框架和频率
+6.以下都是沟通管理计划的内容，除了(    )。
+  A.谁可以接收什么信息                           B.谁可以直接与项目经理沟通
+  C.分配给沟通活动的时间和资金                   D.问题升级流程
+7.项目沟通管理包括以下所有过程，除了(    )。
+  A.识别干系人              B.规划沟通           C.控制沟通             D.管理干系人期望
+8.在项目沟通中，谁负责确保信息的清楚、明确和完整?(    )
+  A.项目经理                 B.信息发送者         C.信息接收者          D.沟通双方
+9.经常可以用挣值管理的方法来预测项目完工时的成本。这种预测方法属于(    )。
+  A.判断方法                 B.计量经济学方法     C.模拟预测方法        D.时间序列方法
+10.作为项目经理获取、存储和向干系人发布项目成本、进度和绩效信息的标准工具，报告系统常用于(  )。
+  A.规划沟通过程             B.发布信息过程       C.报告绩效过程        D.管理干系人期望过程
+11.管理干系人期望过程属于(    )。
+  A.启动过程组                B.规划过程组        C.执行过程组          D.监控过程组
+12.除下列哪项外，其余都是规划沟通的依据?(    )
+  A.干系人登记册              B.干系人管理策略    C.事业环境因素        D.沟通技术
+13.进行项目沟通需求分析，旨在确定(  )。
+  A.能用于沟通的时间和资金多少                   B.所需信息的类型和格式，以及信息对干系人的价值
+  C.可使用的沟通技术                              D.沟通渠道的多少
+14.下列哪种方式最适合于向高层管理者报告每月的项目进度?(    )
+  A.里程碑图                 B.汇总横道图         C.网络图               D.绩效报告
+15.沟通管理计划为项目沟通活动提供以下何种信息?(    )
+  A.如何满足项目干系人的沟通需求                   B.定期向项目干系人提供什么信息
+  C.规划项目的沟通活动                             D.明确项目团队成员的沟通责任
+16.发布信息过程的输入包括(    )。
+  A.工作绩效信息             B.工作绩效测量结果    C.绩效报告            D.信息发布工具
+17.以下哪个不是管理干系人期望过程的输入?(    )
+  A.变更日志                 B.变更请求            C.问题日志            D.干系人登记册
+18.在沟通管理中，强调向正确的人提供正确的信息，也强调只提供所需要的信息。前者和后者分别是指(  )。
+  A，及时的沟通，充分的沟通                        B.有效率的沟通，有效果的沟通
+  C.充分的沟通，及时的沟通                         D.有效果的沟通，有效率的沟通
+19.绩效报告中通常不包括以下哪项?(    )
+  A.本报告期完成的工作                             B.累计偏差情况
+  C.预测的项目完工时间和成本                       D.已提出的全部变更请求
+20.项目经理应该是一个多面的角色，其中包括作为沟通者。项目经理有多少时间是花费在沟通上面的?(  )
+  A.20％～50％               B.75％～90％          C.30％～60％           D.10％一30％
+21.项目沟通系统中，对项目沟通效果起关键作用的是(    )。
+  A.项目发起人               B.高级管理层           C.项目经理            D.项目团队
+22.以下哪个最好地描述了事业环境因素对规划沟通过程的影响?(    )
+  A.项目执行组织的组织结构对项目的沟通需求有重要影响
+  B.项目执行组织的标准化工作流程对项目的沟通需求有重要影响
+  C.项目执行组织的沟通管理计划模板对项目的沟通规划有重要影响
+  D.项目执行组织的经验教训文档对项目的沟通规划有重要影响
+23.以下哪个是识别干系人过程的输入?(    )
+  A.人力资源计划              B.组织机构图          C.采购文件            D.活动资源需求
+24.项目绩效报告的主要目的是(    )。
+  A.让项目干系人了解项目并取得他们的支持            B.向高级管理层报告项目问题
+C.让客户了解已经完成的工作包                      D.向职能经理提供项目信息
+25.以下哪个过程会导致问题日志更新?(
+A.发布信息                  B.管理干系人期望      C.报告绩效            D.规划沟通
+26.工作绩效信息中不包括(    )。
+A.已实现的进度                                    B.已发生的成本
+C.已产生的进度和成本偏差                          D.可交付成果的状态
+27.项目经理经常使用哪种沟通方法来发布项目绩效报告?(    )
+A.交互式沟通                B.非正式沟通          C.推式沟通            D.拉式沟通
+28.在项目计划阶段，有8个关键项目干系人被识别；项目执行过程中，又发现原来遗漏掉的2个重要干系人。此时，项目潜在的沟通渠道增加了多少?(    )
+A.28                        B.17                   C.16                  D.45
+29.在沟通管理中，个人通过对信息的感觉和认知，建立对信息的理解，这个过程属于(    )。
+A.理解                      B.解码                  C.编码               D.接收
+30.以下都是拉式沟通的例子，除了(    )。
+A.电子邮件              B.项目网页     C.共享在线知识库      D.带密码保护的在线项目管理计划
+31.识别干系人过程的输入包括(    )。
+A.项目工作说明书            B.项目范围说明书         C.采购文件          D.干系人登记册
+32.使用凸显模型对干系人进行分析，应该考虑以下所有，除了(    )。
+A.干系人在项目上的利益                               B.干系人对项目施加影响的能力
+C.干系人的紧急程度                                   D.干系人参与项目的合法性
+33.以下哪个说法是正确的?(    )
+A.为了保证项目成功，应该尽可能多地开展沟通
+B.项目资源只能用来沟通有利于项目成功的信息
+C.为鼓励充分沟通，在规划沟通时，不能限制谁应该与谁沟通
+D.应该把项目的所有信息发送给所有的干系人
+34.一个公共卫生项目，建立了一个公开的电子网页，用来向广大市民发布项目进展情况。这是属于(    )。
+A.交互式沟通                B.口头沟通               C.推式沟通           D.拉式沟通
+35.报告绩效过程会导致的组织过程资产更新，通常包括对绩效报告的格式的更新和相关的经验教训。以下所有都应该记录在经验教训文档中，除了(    )。
+A.问题的起因         B.所采取的纠正措施       C.采取该纠正措施的理由      D.变更请求状态更新
+36.在规划沟通时，需要根据下列哪个因素来确定沟通需求?(    )
+A.项目团队成员是集中办公还是分散办公                  B.收集和发布信息的方法
+C.需要收集的信息种类                                  D.发布信息的频率高低
+37.用来计算项目团队中潜在沟通渠道数量的公式是(    )。
+  A.n(n-2)/2，其中n代表团队成员的人数               B.n(n-1)/2，其中n代表团队成员的人数
+  C.n(n-1)/4，其中n代表团队成员的人数               D.[n(n-1)2]/4，其中n代表团队成员的人数
+38.项目经理发现一个团队成员的工作表现不佳。他处理这个问题的最好沟通方法是(    )。
+  A.正式书面沟通        B.正式口头沟通                C.非正式书面沟通        D.非正式口头沟通
+39.以下哪一种预测方法属于时间序列方法?(    )
+  A.线性预测             B.回归分析                   C.德尔菲法              D.模拟预测
+40.干系人登记册中通常包括(    )。
+  A.干系人的基本信息、评估信息和分类                  B.干系人的基本信息、分类和管理策略
+  C.干系人的基本信息、所在位置和分类                  D.干系人的基本信息、在项目中的角色和分类
+参考答案及解析
+1.A.项目资源有限，项目经理的时间也有限，所以项目沟通不是越多越好。过度沟通会产生不利影响。
+  B.正确答案。项目往往有众多干系人，而项目经理的时间有限，项目资源也有限，所以项目沟通只能针对那些有利于项目成功或不沟通会导致项目失败的信息。
+  C.由于资源有限，在规划沟通时，就应该确定和限制谁应该与谁沟通，以及谁将接收何种信息。
+  D.项目经理应该管理沟通，避免向错误的受众传递敏感信息或者向干系人发送他们不需要的信息。
+  参见：PMBOKR指南第253页。
+  考点与答题技巧：沟通需求分析。
+2.A.问题日志中的问题通常不会大到足以成为一个单独的进度活动。
+  B.既然问题不足以成为一个进度活动，问题的解决方案当然不会成为一个工作包。
+  C.不是所有的问题都需要项目经理亲自负责的。
+  D.正确答案。指定责任人，并规定解决问题的目标日期，最有利于问题的解决。
+  参见：PMBOKR指南第263页。
+  考点与答题技巧：问题日志与问题解决。
+3.A.确保信息的完整接收和正确理解，是信息接收者的责任。注意：信息发送者有责任“确认”(根据接收者的反馈)信息已被完整接收和正确理解，不是“确保”。
+  B.信息接收者赞同信息的内容，这不是发送者能决定的。
+  C.未体现信息发送者编码工作的本质，虽然本说法并不错。
+  D.正确答案。信息发送者的主要职能是编码和正确发送信息。
+  参见：PMBOKR指南第255页，解读第188页。
+  考点与答题技巧：信息发送者的编码责任。
+4 A.正确答案。项目持续时间长短对沟通需求没有直接影响，但是对沟通技术的选择有直接影响(需要考虑在项目期间可用的沟通技术可能发生的变化)。
+  B.组织结构图对项目的沟通需求有直接的影响，组织机构图反映了项目组织内部信息流动的正式渠道。
+  C.对项目的沟通需求有直接影响，参与项目工作的人数可以反映项目沟通的复杂程度。
+  D.可以直接影响对项目的沟通需求，跨学科、跨专业程度越高，项目沟通越复杂。
+  参见：PMBOKR指南第254页。
+  考点与答题技巧：影响沟通需求的因素。
+5.A.这是沟通管理计划的内容，不同的项目干系人对项目信息有不同的要求。
+  B.正确答案。这是项目章程以及项目进度计划中的内容。
+  C.这是沟通管理计划的内容，明确了项目信息应该向谁传递。
+  D.这是沟通管理计划的内容，明确了项目信息应该在干系人需要的时候被传递。
+  参见：PMBOKR指南第257页。
+  考点与答题技巧：沟通管理计划的内容。
+6.A.这是沟通管理计划中的内容，以保证不同的干系人得到各自所需要的信息。
+  B.正确答案。尽管沟通管理计划中可以规定和限制谁应该与谁沟通，但是通常所有团队成员或其他干系人都可以与项目经理沟通。
+  C.沟通活动需要时间和资金，所以在沟通管理计划中应该有这方面的安排。
+  D.促进干系人之间的沟通的很重要的手段就是让他们了解问题解决渠道。问题升级流程可以使大家明白问题解决渠道，它是沟通管理计划中的内容。
+  参见：PMBOKR指南第257页。
+  考点与答题技巧：沟通管理计划的内容。
+7.A.这是项目沟通管理的第一个过程，旨在识别所有项目干系人，并记录他们的利益以及他们可能给项目带来的影响。
+  B.这是项目沟通管理的第二个过程，旨在确定项目干系人的信息需求，并定义沟通方法。
+  C.正确答案。没有控制沟通过程。
+  D.这是项目沟通管理的过程之一，旨在与干系人沟通和合作，并解决所发生的问题，满足干系人的需求。
+  参见：PMBOKR指南第243页，解读第185页。
+  考点与答题技巧：项目沟通管理的相关过程。
+8.A.在项目沟通活动中，项目经理可能是信息发送者，也可能是接收者，而二者在沟通活动中承担不同的责任。
+  B正确答案。根据沟通模型，信息发送者需要对拟传递的信息进行整理，以使信息清楚、明确和完整。
+  C.信息接收者的责任是对信息进行解码，确保完整地接收信息、正确地理解信息，并向信息发送者进行反馈。
+  D.答案中包括信息接收者，而信息接收者无法履行这种责任。
+  参见：PMBOKR指南第255页，解读第188页。
+  考点与答题技巧：信息发送者的职责。
+9.A.挣值法不是判断方法，判断方法是直觉判断、主观判断和概率估算的综合，比如组合预测、调查、德尔菲法等都属于判断方法。
+  B.计量经济学方法(因果方法)不包括挣值法。计量经济学方法(因果方法)侧重于找出影响被预测变量的根本因素。
+  C.模拟预测是其他预测方法的一种，与挣值法无关。
+  D.正确答案。时间序列方法是以历史数据为基础来估算未来结果，挣值、移动平均数等方法都属于时间序列方法。
+  参见：PMBOKR指南第269页。
+  考点与答题技巧：编制绩效报告时可用的预测方法。
+10.A.报告系统是报告绩效过程的工具与技术。    B.同上。
+  C.正确答案。同上。    D.同上。
+  参见：PMBOKR指南第270页。
+  考点与答题技巧：报告绩效过程的工具与技术。注意：信息发布工具是发布信息过程的工具，而报告系统是报告绩效过程的工具。
+11.A.不属于启动过程组。启动过程组中有识别干系人过程。
+  B.不属于规划过程组。
+  C.正确答案。管理干系人期望过程属于执行过程组。
+  D.不属于监控过程组。在以前的PMBOK○R指南第3版中，“管理干系人过程”属于监控过程组，但第4版做了调整。
+  参见：PMBOKR指南第43页。
+  考点与答题技巧：管理干系人期望过程与执行过程组。
+12.A.是规划沟通过程的输入，提供已识别的项目干系人的信息。
+  B.干系人管理策略包括为提高干系人支持、降低干系人负面影响的管理策略，它是规划沟通的输入。
+  C.因为沟通必须适应项目的环境，事业环境因素可以提供规划沟通时需要考虑的环境因素。
+  D.正确答案。沟通技术是规划沟通过程的工具与技术，而不是输入。
+  参见：PMBOKR指南第252页。
+  考点与答题技巧：规划沟通过程的输入。
+13.A.在规划沟通过程中需要考虑，但是，在沟通需求分析时尚不需要考虑可用的时间和资金。
+  B.正确答案。沟通需求分析的主要目的就是要确定干系人对信息的需求，例如，他们需要什么信息、喜欢这些信息以什么方式和格式传递、为什么需要这些信息等等。
+  C.在选择沟通技术时才加以考虑。
+  D.尽管可以确定沟通渠道的多少，但这不是沟通需求分析的最主要的目的。
+  参见：PMBOK○R指南第253页。
+  考点与答题技巧：沟通需求分析的目的。
+14.A里程碑图仅提供里程碑的实现时间。在大型项目上，不一定每月都有里程碑实现。
+  B.正确答案。汇总横道图中包括概括性活动的信息，并且相对易读，适于向高层管理者报告信息。
+  C.网络图只能显示活动之间的逻辑关系，不能报告项目进度情况。
+  D.包括的范围太大，没有针对性。
+  参见：PMBOKR指南第157页，解读第108页。
+  考点与答题技巧：选择报告的形式时，应该考虑沟通对象的需要。注意：如果没有“汇总横道图”，则可选“里程碑图”。
+15.A.正确答案。为了满足项目干系人的沟通需求，沟通管理计划中包括：向哪些干系人提供何种信息，什么时候提供，由谁提供等信息。
+  B.不全面，尽管本说法并没有错。
+  C.完全不能回答题目的问题。
+  D.答案不完整，项目团队成员的沟通责任，只是项目沟通管理计划中的一部分信息。
+  参见：PMBOKR指南第257页，解读第187页。
+  考点与答题技巧：项目沟通管理计划的内容。
+16.A.工作绩效信息是报告绩效过程的输入。
+  B.工作绩效测量结果是报告绩效过程的输入。
+  C.正确答案。绩效报告是发布信息过程的输入。
+  D.信息发布工具是发布信息的技术与工具。
+  参见：PMBOKR指南第244页。
+  考点与答题技巧：发布信息过程的输入。对于直接考输入输出或工具技术的题目，无论PMBOK~指南中的相关规定是否合理，都必须严格按PMBOK○R指南中的规定答题。
+17.A.变更日志可以让干系人了解这些变更及其对项目时间、成本和风险的影响，是管理干系人期望过程的输入。
+  B.正确答案。变更请求是管理干系人期望过程的输出，实施整体变更控制过程的输入。
+  C.问题日志记录了问题的状况，有利于与干系人一起解决问题。
+  D.对干系人进行管理，当然要依据干系人登记册和干系人管理策略。
+  参见：PMBOKR指南第244页，解读第194页。
+  考点与答题技巧：管理干系人期望过程的输入。
+18.A.明显与题意不合。
+  B.前者应该是有效果的沟通，后者是有效率的沟通。
+  C.明显与题意不合。
+  D.正确答案。向正确的人提供正确的信息，就能使信息发挥应有的作用，因此就有效果；只提供所需要的信息，就可防止浪费资源，因此沟通就有效率。
+  参见：PMBOKR指南第252页。
+  考点与答题技巧：沟通的效率与效果。
+19.A.绩效报告是在工作绩效信息和项目计划的基础上编制的，本报告期内完成的工作是绩效报告的一部分。
+  B.实际进展情况与计划之间的偏差，是绩效报告的内容。
+  C.绩效报告中应该基于项目过去的绩效对完工时间和成本的情况进行预测。
+  D.正确答案。绩效报告中需要汇集在报告期中获得批准的各种变更，但不应该包括未获批准的变更。
+  参见：PMBOKR指南第270页。
+  考点与答题技巧：绩效报告的内容。
+20.A.项目经理的大多数时间是花在沟通上面的。
+  B.正确答案。项目经理可能需要把多达90％的时间用在项目沟通上。
+  C.项目经理的大多数时间都用在与团队成员和其他干系人的沟通上。
+  D.项目经理的大多数时间都用在与团队成员和其他干系人的沟通上。
+  参见：PMBOKR指南第243页，解读第184页。
+  考点与答题技巧：项目经理的沟通技能。
+21.A.发起人只是项目沟通的对象之一。
+  B.高级管理层只是项目沟通的对象之一。
+  C.正确答案。项目经理在与各种干系人的沟通中负主要责任，项目经理也对促进干系人与项目之间的互动起核心作用。
+  D.项目团队的范围太广，不同的团队成员在项目沟通中承担不同的责任，所起的作用也不尽相同。
+  参见：PMBOKR指南第26页，解读第190页。
+  考点与答题技巧：项目经理是项目沟通的核心。
+22.A.正确答案。组织结构是事业环境因素之一。
+  B.标准化的工作流程是组织过程资产，而非事业环境因素。
+  C.沟通管理计划模板是组织过程资产，而非事业环境因素
+  D.经验教训文档是组织过程资产，而非事业环境因素
+  参见：PMBOKR指南第252页。
+  考点与答题技巧：事业环境因素与规划沟通过程。
+23.A.在开展识别干系人过程时，还不存在人力资源计划。
+  B.在开展识别干系人过程时，还不存在组织机构图。组织机构图是人力资源计划的一部分。
+  C.正确答案。尽管最初开展识别干系人过程时，还没有采购文件；但是应该在采购文件编制完成后，把与采购工作有关的干系人添加进干系人登记册和干系人管理策略(识别干系人的输出)。
+  D.不是识别干系人过程的输入。
+  参见：PMBOKR指南第246页，解读第195页。
+  考点与答题技巧：识别干系人过程的输入。
+24.A.正确答案。在项目绩效报告中，应该根据沟通管理计划，向干系人提供关于项目进展情况的信息。让干系人了解项目情况，对取得干系人的支持有重要作用。
+  B.不完全，因为绩效报告的对象不仅仅是高级管理层。
+  C.不完全，客户只是绩效报告的对象之一，而且“已经完成的工作包”太狭窄。
+  D不完全，职能经理只是绩效报告的对象之一。
+  参见：PMBOKR指南第270页。
+  考点与答题技巧：绩效报告的作用。
+25.A.发布信息过程会导致组织过程资产更新，但PMBOK○R指南在这个更新中未提到问题日志更新。
+  B.正确答案。管理干系人期望过程会导致项目文件更新，其中包括干系人登记册更新、干系人管理策略更新和问题日志更新。
+  C.报告绩效过程会导致组织过程资产更新，其中包括绩效报告格式更新和经验教训文档更新，但没有问题登记册更新。
+  D.规划沟通过程会导致项目文件更新，其中包括项目进度计划更新、干系人登记册更新和干系人管理策略更新，但没有问题登记册更新。
+  参见：PMBOKR指南第265页。
+  考点与答题技巧：管理干系人期望过程的输出。注意：问题日志也是管理干系人期望过程的输入。问题日志还是管理项目团队过程的工具与技术。
+26.A.已实现的进度是项目执行过程中所产生的常规信息，属于工作绩效信息的一部分。
+  B.已发生的成本也是工作绩效信息的一部分，它不是预测或与计划比较才能得到的信息，而是在项目执行过程中收集到的常规信息。
+  C.正确答案。工作绩效信息是项目执行过程中常规收集的信息，没有与计划相比较的信息，而进度和成本偏差是与计划比较后才能得到的信息。已产生的进度和成本偏差是工作绩效测量结果和绩效报告的内容。
+  D.可交付成果的完成情况，也是工作绩效信息的一部分。
+  参见：PMBOKR指南第268页，解读第99页。
+  考点与答题技巧：工作绩效信息。
+27.A.不适用，交互式沟通适于在双方或多方之间进行即时的信息交换。
+  B.项目绩效报告通常应该以正式的方式发布。
+  C.正确答案。一般情况下，项目经理可用推式沟通把绩效报告发送给需要了解项目绩效的特定干系人。
+  D.拉式沟通适用于信息量很大或受众很多的情况，不适用本题情况。
+  参见：PMBOKR指南第256页。
+  考点与答题技巧：推式沟通。
+28 A根据沟通渠道计算公式，28是8个关键项目干系人时的沟通渠道数。注意看清题目。
+  B.正确答案。根据沟通渠道计算公式，沟通渠道增加了：[10(10-1)/2]-[8(8-1)/2]=17。
+  C.错误的计算结果。
+  D.根据沟通渠道计算公式，45是10个干系人时的沟通渠道数。注意看清题目。
+  参见：PMBOKR指南第253页，解读第193页。
+  考点与答题技巧：全通道沟通模式下的沟通渠道数量计算，公式为：n(n-1)/2。这个知识点很简单，但考到的可能性比较大。
+29 A.与题意不符，题目描述的是沟通活动的组成要素之一，而理解不是沟通活动中的要素。
+  B.正确答案。题目中描述的是接收信息的活动，它与解码相关。
+  C.编码是把思想或想法转化为他人能理解的语言，正好与解码相反。
+  D.接收是解码的前提，信息接收者接收信息后还需要把信息还原成有意义的思想或想法。
+  参见：PMBOKR指南第255页，解读第188页。
+  考点与答题技巧：沟通模式及其关键要素。
+30.A.正确答案。电子邮件是推式沟通，不是拉式沟通。
+  B.项目网页是拉式沟通，符合拉式沟通的特点。
+  C.这是拉式沟通，符合拉式沟通的特点。
+  D.这是拉式沟通，符合拉式沟通的特点。
+  参见：PMBOKR指南第256页。
+  考点与答题技巧：拉式沟通。拉式沟通在信息量很大或受众很多的情况下使用。
+31. A.这是制定项目章程过程的输入。
+  B.这是定义范围过程的输出。
+  C.正确答案。在编制出采购文件之后，需要重新开展识别干系人过程，把与采购工作相关的干系人加到干系人登记册中。
+  D.这是识别干系人过程的输出。
+  参见：PMBOKR指南第246页，解读第195页。
+  考点与答题技巧：识别干系人过程的输入。
+32.A正确答案。凸显模型中包括B、C、D。
+  B.解释见A。    C.同上。    D.同上。
+  参见：PMBOKR指南第249页。
+  考点与答题技巧：干系人分析与归类的方法。
+33.A过度沟通不仅浪费资源；而且会妨碍项目成功。
+  B.正确答案。由于资源有限，沟通只能针对那些有利于项目成功的信息或不沟通会导致项目失败的信息。
+  C.可能需要限制谁应该与谁沟通。    D.这个选项太绝对。
+  参见：PMBOKR指南第253页。
+  考点与答题技巧：资源有限下的沟通。
+34.A.交互式沟通，就是互动式沟通，如你一言我一语的会谈。
+  B.与题意无关。
+  C.推式沟通适合于沟通对象不多的情况，如发送邮件。
+  D.正确答案。建立电子网站，属于拉式沟通。拉式沟通适用于沟通对象很多或者要沟通的信息很多的情况。
+  参见：PMBOKR指南第256页。
+  考点与答题技巧：沟通的方法。
+35.A经验教训文档中应该记录：问题的起因，所采取的纠正措施及其理由。  B同上。    C.同上。
+  D.正确答案。变更请求状态更新，是实施整体变更控制过程的输出。
+  参见：PMBOKR指南第271页。
+  考点与答题技巧：组织过程资产更新、经验教训总结。
+36.A.正确答案。集中办公与分散办公下的沟通需求，肯定有较大不同。
+  B.这是沟通管理计划中的内容，而沟通管理计划是规划沟通过程的输出。  C.同上。    D.同上。
+  参见：PMBOKR指南第254页。
+  考点与答题技巧：规划沟通过程：根据具体情况，确定沟通需求。
+37.A.计算团队中潜在沟通渠道数量的公式是n (n－1)/2，其中n代表团队成员的人数。
+  B.正确答案。解释见A。  C.同A  D.同A。
+  参见：PMBOKR指南第253页，解读第193页。
+  考点与答题技巧：团队中潜在沟通渠道数量的计算公式。
+38.A.解决冲突或批评别人，最好采用非正式的口头沟通。如不起作用，再用正式书面沟通。
+B.同上。     C.同上。
+   D.正确答案。解释同A。
+   参见：解读第189页。
+   考点与答题技巧：冲突解决中的沟通方法。
+39.A.正确答案。线性预测属于时间序列方法。    B.回归分析属于因果方法。  C.德尔菲法属于判断方法。D.模拟预测属于其他方法。
+  参见：PMBOKR指南第269页。
+  考点与答题技巧：预测方法。
+40.A.正确答案。干系人登记册中应该包括干系人的基本信息、评估信息和干系人初步分类。
+  B.管理策略不属于干系人登记册中的内容，而是干系人管理策略中的内容。
+  C.干系人的所在位置是干系人基本信息的一种。
+  D.干系人在项目中的角色属于干系人基本信息的一种。
+  参见：PMBOKR指南第250页。
+  考点与答题技巧：干系人登记册的内容。
 
 # PMBOK指南（第5版）第十章习题_seahill_新浪博客 http://blog.sina.com.cn/s/blog_4d2d43010101gclk.html
 
