--- a/manage/pmp/10-沟通.md
+++ b/manage/pmp/10-沟通.md
@@ -1,15 +1,72 @@
 
 
 # PMP试题第十章 项目沟通管理-历年试题资料-中培课堂 http://www.zpedu.com/SubjectInfo1467.html
-  15，6，
+  15，6，12，26，20, 27
 # PMP习题_百度文库 https://wenku.baidu.com/view/e5f3a59f168884868662d6d4.html
   137 P6，
 # 第五版PMP模拟试题3 - 豆丁网 http://www.docin.com/p-958655809-f3.html
   131 P22,
 # pmp资格认证考试分类模拟题项目沟通管理(二) - 职业资格 - 道客巴巴 http://www.doc88.com/p-5496378679986.html
-  22 P2，
+  1，22 P2，24 P3，16，
+# 项目管理工具与模板运用 - 其它 - 道客巴巴 http://www.doc88.com/p-1416819987566.html
+  P89
+# 第五版PMP综合模拟试题(一)_百度文库 https://wenku.baidu.com/view/36e197f4a417866fb94a8e4b.html
+  22 P7，
+# PMP-有用真题 - 经营企划 - 道客巴巴 http://www.doc88.com/p-8691317201249.html
+  30
+# PMP每日10题_商老师_水手_新浪博客 http://blog.sina.com.cn/s/blog_5488a33b0102wa0l.html
+  7
+# PMP 第10章  项目沟通管理 试题 及解析_爱随风来_新浪博客 http://blog.sina.com.cn/s/blog_75cd9f870100vk1t.html
+  13，18
+# PMP考前模拟题一最终_大学生考试网 http://www.9299.net/read/kkl59hjg9ki3j5hhli0g7409.html
+  82
 
+# PMP题库_PMP模拟题答案及分析_项目沟通计划模拟试题6-10题_PMP认证_新浪博客 http://blog.sina.com.cn/s/blog_86087db60100yykn.html
 
+6. 你想让团队成员了解项目每周的状态报告现在应该在星期四下午四点正式提交。你将使用哪种沟通形式？
+       A．正式书面沟通。
+       B．正式口头沟通。
+       C．非正式书面沟通。
+       D．非正式口头沟通。
+
+    答案：“C. 非正式书面沟通。”
+    为了确保每个人都获得变更的信息，你需要记录变更，但是并不需要正式沟通。
+ 
+7. 多数沟通都采取什么形式？
+       A．非语言形式的沟通。
+       B．口头。
+       C．辅助语言。
+       D．参考形式。
+
+    答案：“A. 非语言形式的沟通”
+    55％的信息是通过非语言形式的沟通传递的。
+ 
+8. 除了下述哪项之外，其余各项都是沟通计划的输入？
+       A．沟通要求。
+       B．交换信息可以使用的技术。
+       C．约束条件。
+       D．需要分发的信息的描述。
+
+    答案：“D. 需要分发的信息的描述。”
+      你需要考虑所有干系人的沟通要求，以及如何分发信息。信息描述是计划过程的一项输出。
+ 
+9. 项目团队成员来自四个不同的国家。项目对公司十分重要，项目经理也十分关注项目的成功。项目工期可以接受。项目经理应该使用什么类型的沟通方法？
+       A．非正式口头。
+       B．正式书面。
+       C．正式口头。
+       D．非正式书面。
+
+    答案：“B. 正式书面。”
+    因为文化差异，以及团队成员之间的距离，你需要使用正式的书面沟通。
+ 
+10. 状态会议的目的是：
+       A．交换项目信息。
+       B．让团队成员汇报正在执行的工作。
+       C．签发工作授权。
+       D．确认团队提交的成本的准确性。
+
+    答案：“A. 交换项目信息。”
+    在这种情况下，选项B可能正确，这是单向沟通。选项A是双向沟通，并且可以讨论多个问题，而不仅仅是每个团队成员的工作。
   
 # PMP 第10章  项目沟通管理 试题 及解析_爱随风来_新浪博客 http://blog.sina.com.cn/s/blog_75cd9f870100vk1t.html
   30
