--- a/manage/pmp/10-沟通.md
+++ b/manage/pmp/10-沟通.md
@@ -1,7 +1,7 @@
 
 
 # PMP试题第十章 项目沟通管理-历年试题资料-中培课堂 http://www.zpedu.com/SubjectInfo1467.html
-  15，6，12，26，20, 27
+  15，6，12，26，20, 27，2,10
 # PMP习题_百度文库 https://wenku.baidu.com/view/e5f3a59f168884868662d6d4.html
   137 P6，
 # 第五版PMP模拟试题3 - 豆丁网 http://www.docin.com/p-958655809-f3.html
@@ -17,9 +17,13 @@
 # PMP每日10题_商老师_水手_新浪博客 http://blog.sina.com.cn/s/blog_5488a33b0102wa0l.html
   7
 # PMP 第10章  项目沟通管理 试题 及解析_爱随风来_新浪博客 http://blog.sina.com.cn/s/blog_75cd9f870100vk1t.html
-  13，18
+  13，18，14
+# [转载]PMBOK指南（第5版）第十章习题_大队长桃子_新浪博客 http://blog.sina.com.cn/s/blog_51890fea0102w74x.html
+  17  
 # PMP考前模拟题一最终_大学生考试网 http://www.9299.net/read/kkl59hjg9ki3j5hhli0g7409.html
   82
+# PMP 真题回忆试题样题100题 更新到201303_jxmpmp_231_新浪博客 http://blog.sina.com.cn/s/blog_c13518890101ha97.html
+  32
 
 # PMP题库_PMP模拟题答案及分析_项目沟通计划模拟试题6-10题_PMP认证_新浪博客 http://blog.sina.com.cn/s/blog_86087db60100yykn.html
 
