--- a/manage/pmp/10-重点113.md
+++ b/manage/pmp/10-重点113.md
@@ -1,1 +1,4 @@
 * PMP考前最后113复习题查漏补缺知识点，-考试会有同类型的试题 - 其他考试资料 - 道客巴巴 http://www.doc88.com/p-4117422580903.html
+
+* 如何区分成本补偿合同与工料合同 http://www.360doc.com/content/16/1127/20/37253146_609998714.shtml
+    看到范围清楚择选总价合同； 看到范围不清楚择选成本补偿合同； 看到没有范围（无法定义SOW）就选工料合同。
